test/corpus/example-file
==================================================
function
==================================================
main() ->
    call().
--------------------------------------------------

    (source_file
      (form
        (fun_recovery
          (fun
            (name)
            (args)
            (clause_body
              (call
                (name)))))))

==================================================
function definition: error recovery (not very good)
==================================================
main() ->
    call(
--------------------------------------------------
    (source_file
      (form
        (fun_recovery
          (catch_all
            (any_tok
              (name))
            (any_tok
              (args))
            (any_tok))))
      (form
        (fun_recovery
          (catch_all
            (any_tok
              (name))
            (any_tok)))))

==================================================
function definition: error recovery two
==================================================
main() ->
    call(

foo() ->
    call().
--------------------------------------------------
    (source_file
      (form
        (fun_recovery
          (catch_all
            (any_tok
              (name))
            (any_tok
              (args))
            (any_tok))))
      (form
        (fun_recovery
          (catch_all
            (any_tok
              (name))
            (any_tok))))
      (form
        (fun_recovery
          (fun
            (name)
            (args)
            (clause_body
              (call
                (name)))))))


==================================================
function definition: error recovery two corrected
==================================================
main() ->
    call().

foo() ->
    call().
--------------------------------------------------
    (source_file
      (form
        (fun_recovery
          (fun
            (name)
            (args)
            (clause_body
              (call
                (name))))))
      (form
        (fun_recovery
          (fun
            (name)
            (args)
            (clause_body
              (call
                (name)))))))